--- a/css/styles.css
+++ b/css/styles.css
@@ -5,19 +5,20 @@
     --color-text-logo2: #000000; /*колір лого*/
     --primery-background: #ffffff; /* колір фону хедер */
     --second-background: #2F303A; /*колір фону зверху секція 1 та футер*/
-    --filter-color: #F5F4FA;/*колір наша команда*/
+    --filter-color: #F5F4FA;/*колір наша команда фон кнопок портфоліо*/
     --background-olor: #F5F5F5; /*основний колір фону*/
 }
 
 body {
     font-family: Roboto, sans-serif;
     background-color: var(--background-olor);
-    color: var(#212121);
+    color: var(--color-text);
 }
 ul {
     list-style: none;
+    text-decoration: none;
 }
-/*logo*/
+/*logo*/ /*дизайн основної сторінки*/
 
 .logo {
     font-family: 'Raleway';
@@ -162,7 +163,50 @@ ul {
     color: var(--primery-background);
 }
 
+/*портфоліо*/
+/*кнопки*/
+.portfolio-button {
+    width: 103px;
+    height: 38px;
+    left: 846px;
+    top: 174px;
+    background: var(--filter-color);
+    border-radius: 4px;
+    cursor: pointer;
 
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--color-text);
+}
+.portfolio-button:hover {
+    left: 512px;
+    background: var(--color-text-logo);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    color: var(--primery-background);
+}
+
+/*приклади робіт*/
+.title-portfolio {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--color-text);
+}
+.lead-portfolio {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--color-text-secohd);  
+}
+.link-portfolio {
+    list-style: none;
+    text-decoration: none;
+}
 
 
 /**/
