--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@
 
 body {
     font-family: Roboto, sans-serif;
-    background-color: var(--background-olor);
+    background-color: var(--primery-background);
     color: var(--color-text);
 }
 ul {
@@ -47,6 +47,9 @@ ul {
 .link:hover {
     color: var(--color-text-logo);
 }
+.link:focus {
+    color: var(--color-text-logo);
+}
 
 /*хедер пошта тел*/
 .heder-contact {
@@ -59,6 +62,9 @@ ul {
     color: var(--color-text-secohd);
 }
 .heder-contact:hover {
+    color: var(--color-text-logo);
+}
+.heder-contact:focus {
     color: var(--color-text-logo);
 }
 
@@ -76,6 +82,7 @@ ul {
     color: var(--primery-background);
 }
 .button {
+    font-family: roboto;
     cursor: pointer;
     background: var(--color-text-logo);
     font-weight: 700;
@@ -86,6 +93,14 @@ ul {
     text-align: center;
     letter-spacing: 0.06em;
     color: var(--primery-background);
+}
+.button:hover {
+    background-color: var(--filter-color);
+    color: var(--color-text);
+}
+.button:focus {
+    background-color: var(--filter-color);
+    color: var(--color-text);
 }
 
 /*наші переваги, секція 2*/
@@ -128,6 +143,9 @@ ul {
 }
 
 /*наша команда*/
+.team-section {
+    background-color: var(--filter-color);
+}
 .team-name {
     font-weight: 500;
     font-size: 16px;
@@ -142,20 +160,49 @@ ul {
     letter-spacing: 0.03em;
     color: var(--color-text-secohd);
 } 
-
+.list-team {
+    background-color: var(--primery-background);
+}
+.title-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.16;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--color-text);
+}
 /*футер*/
 .footer {
     background-color: var(--second-background);
 }
+.logo-footer {
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    letter-spacing: 0.03em;
+    list-style: none;
+    text-decoration: none;
+}
+.logo-web-footer {
+    color: var(--color-text-logo);
+}
+.logo-studio-footer {
+    color: var(--primery-background);
+}
+
 .footer-contact{
     text-decoration: none;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: rgba(255, 255, 255, 0.6);
+    color: var(--color-text-secohd);
+    
 }
 .adres {
+    font-style: normal;
+}
+.adres-maps {
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
@@ -166,6 +213,7 @@ ul {
 /*портфоліо*/
 /*кнопки*/
 .portfolio-button {
+    font-family: roboto;
     width: 103px;
     height: 38px;
     left: 846px;
@@ -182,6 +230,12 @@ ul {
     color: var(--color-text);
 }
 .portfolio-button:hover {
+    left: 512px;
+    background: var(--color-text-logo);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    color: var(--primery-background);
+}
+.portfolio-button:focus {
     left: 512px;
     background: var(--color-text-logo);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
