--- a/css/styles.css
+++ b/css/styles.css
@@ -95,11 +95,11 @@ ul {
     color: var(--primery-background);
 }
 .button:hover {
-    background-color: var(--filter-color);
+    background-color: #188CE8;
     color: var(--color-text);
 }
 .button:focus {
-    background-color: var(--filter-color);
+    background-color: #188CE8;
     color: var(--color-text);
 }
 
